--- a/public/assets/fonts/fonts.css
+++ b/public/assets/fonts/fonts.css
@@ -15,3 +15,10 @@
     src: url('sigmarone.woff2') format("woff2");
     font-weight: normal;
 }
+
+
+@font-face {
+    font-family: "Handee";
+    src: url('delicious.ttf') format("truetype");
+    font-weight: normal;
+}
